fix: update margin bot visible in darkmode, update color in home page and duration transition dark to light mode

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     background-color: var(--bg-color1);
     min-height: 100vh;
     width: auto;
+    transition: all 1s;
 }
 .App.dark{
     background-color: var(--bg-color2);
