--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -1,7 +1,7 @@
 .home-page{
     display: flex;
     flex-direction: column;
-    margin: 80px 0;
+    padding: 80px 40px;
     font-family: 'Hind Madurai', sans-serif;
 }
 .home-page .title{
@@ -14,14 +14,14 @@
     margin-bottom: 10%;
 }
 .home-page .title h1{
-    margin: 50px;
+    margin: 40px 10px;
     text-align: center;
     font-size: 2.2em;
     font-weight: 400;
     color: var(--text-color1);
     font-family: 'Cormorant', serif;
 }
-.home-page .title h1.dark{
+.home-page.dark .title h1{
     color: var(--dark-color1);
 }
 .home-page .title h1 span{
@@ -29,7 +29,7 @@
     font-weight: 900;
     color: var(--text-color1);
 }
-.home-page .title h1 span.dark{
+.home-page.dark .title h1 span{
     color: var(--dark-color1);
 }
 .home-page .home-page-contain{
@@ -42,6 +42,12 @@
 .home-page .home-page-contain p {
     font-size: 1.2em;
     text-align: justify;
+    color: #000;
+}
+.home-page.dark .home-page-contain p {
+    color: #fff;
+    font-weight: 700;
+
 }
 .home-page .home-page-contain .section-uml-merise{
     display: flex;
@@ -51,26 +57,24 @@
 .home-page .home-page-contain .section-uml-merise .text-uml-home{
     margin: 40px 0;
     text-align: left;
-    font-size: 1.4em;
+    font-size: 1.8em;
 }
 .home-page .home-page-contain .section-uml-merise .text-merise-home{
     margin: 40px 0;
     align-self: flex-end;
     text-align: right;
-    font-size: 1.4em;
+    font-size: 1.8em;
+
 }
 .home-page .home-page-contain .text-bot{
-    font-size: 1.6em;
+    font-size: 1.8em;
     text-align: center;
+
 }
 .section-uml-merise span {
     font-family: 'Cormorant', serif;
-    font-size: 1.2em;
+    font-size: 1.4em;
     text-transform: uppercase;
     font-weight: 700;
-    color: var(--text-color1);
-}
-.section-uml-merise span.dark {
-    color: var(--dark-color1);
 }
 
