--- a/src/components/css/NavBarStyle.css
+++ b/src/components/css/NavBarStyle.css
@@ -2,9 +2,10 @@
     display: flex;
     justify-content: space-between;
     background-color: transparent;
-    padding: 20px;
+    padding: 20px 40px;
     opacity: 1;
     transition: all 1.4s;
+    height: 100px;
 }
 .NavbarItems.zoom-out {
     opacity: 0;
@@ -82,15 +83,15 @@
 }
 .NavbarItems .dark-mode p{
     margin-left: 20px;
+    color: var(--text-color1);
 }
 .NavbarItems .dark-mode p.dark{
-    color: #fff;
+    color: #fff0e3;
 }
 @media(max-width: 820px) {
     .NavbarItems{
         flex-direction: row-reverse;
         justify-content: space-between;
-        padding: 40px 0;
     }
     .NavbarItems .link-page{
         display: none;
